Ros2_workspace/log/build_2022-05-22_15-18-40/got_coffe/stderr.log
  File "/home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/nn_pub.py", line 111
    def main(args=None):
    ^
SyntaxError: invalid syntax

